Remove old deps

--- a/package.json
+++ b/package.json
@@ -3,8 +3,5 @@
   "version": "1.0.0",
   "description": "",
   "license": "UNLICENSED",
-  "devDependencies": {
-    "browser-sync": "^2.26.3",
-    "gulp": "^3.9.1"
-  }
+  "devDependencies": {}
 }
