--- a/package.json
+++ b/package.json
@@ -1,7 +1,27 @@
 {
   "name": "the-finishing-suite",
-  "version": "1.0.0",
-  "description": "",
-  "license": "UNLICENSED",
-  "devDependencies": {}
+  "version": "2.0.0",
+  "description": "The Finishing Suite - Website using Eleventy",
+  "private": "true",
+  "license": "MIT",
+  "contributors": [
+    "Alastair Tye Samson",
+    "Matt Dwen <matt@dwen.co.nz> (https://dwen.co.nz)"
+  ],
+  "scripts": {
+    "dev": "run-p eleventy:serve webpack:watch",
+    "eleventy:serve": "npx @11ty/eleventy --config=eleventy.config.js --serve",
+    "webpack:watch": "webpack --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+  },
+  "devDependencies": {
+    "@11ty/eleventy": "^0.11.0",
+    "browser-sync-webpack-plugin": "^2.2.2",
+    "cross-env": "^7.0.2",
+    "html-minifier": "^4.0.0",
+    "laravel-mix": "^5.0.4",
+    "npm-run-all": "^4.1.5",
+    "resolve-url-loader": "^3.1.1",
+    "sass": "^1.26.10",
+    "sass-loader": "^9.0.2"
+  }
 }
