--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "npm-run-all": "^4.1.5",
     "resolve-url-loader": "^3.1.1",
     "sass": "^1.26.10",
-    "sass-loader": "^9.0.2"
+    "sass-loader": "^9.0.2",
+    "tailwindcss": "^1.6.2"
   }
 }
