--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "Matt Dwen <matt@dwen.co.nz> (https://dwen.co.nz)"
   ],
   "scripts": {
-    "build": "webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js && npx @11ty/eleventy --config=eleventy.config.js",
+    "build": "yarn run build:webpack && npx @11ty/eleventy --config=eleventy.config.js",
+    "build:webpack": "cross-env NODE_ENV=production webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "dev": "cross-env ELEVENTY_ENV=development run-p eleventy:serve webpack:watch",
     "eleventy:serve": "npx @11ty/eleventy --config=eleventy.config.js --serve",
     "webpack:watch": "webpack --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
@@ -18,8 +19,11 @@
     "@11ty/eleventy": "^0.11.0",
     "browser-sync-webpack-plugin": "^2.2.2",
     "cross-env": "^7.0.2",
+    "gulp": "^4.0.2",
+    "gulp-gh-pages": "^0.5.4",
     "html-minifier": "^4.0.0",
     "laravel-mix": "^5.0.4",
+    "laravel-mix-purgecss": "^5.0.0",
     "npm-run-all": "^4.1.5",
     "resolve-url-loader": "^3.1.1",
     "sass": "^1.26.10",
