Windows build for legacy SSL providers

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   ],
   "scripts": {
     "build": "yarn run build:webpack && npx @11ty/eleventy --config=eleventy.config.js",
+    "build:windows": "set NODE_OPTIONS=--openssl-legacy-provider && yarn run build",
     "build:webpack": "cross-env NODE_ENV=production webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "dev": "cross-env ELEVENTY_ENV=development run-p eleventy:serve webpack:watch",
     "dev:windows": "set NODE_OPTIONS=--openssl-legacy-provider && yarn run dev",
